--- a/scss/abstracts/_variable.scss
+++ b/scss/abstracts/_variable.scss
@@ -14,3 +14,7 @@ $very-dark-grayish-blue: hsl(213, 9%, 39%);
 $dark-grayish-blue: hsl(232, 10%, 55%);
 $grayish-blue: hsl(210, 4%, 67%);
 $white: hsl(0, 0%, 100%);
+
+
+// Logo
+$logo-margin: 0 10vw;
