--- a/scss/style.css
+++ b/scss/style.css
@@ -321,8 +321,47 @@ body {
   font-size: 18px;
   font-family: "Barlow", sans-serif;
 }
+body h1 {
+  font-family: "Fraunces", serif;
+}
 
-h1 {
+header {
+  background-image: url("../../image/photos/image-header.jpg");
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: grid;
+  grid-template-rows: 1fr 2fr 4fr;
+  min-height: 70vmax;
+}
+header div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+header div img {
+  align-self: center;
+}
+header div img:nth-child(1) {
+  justify-self: flex-start;
+  margin: 0 10vw;
+}
+header div img:nth-child(2) {
+  justify-self: flex-end;
+  margin: 0 10vw;
+}
+header div nav {
+  display: none;
+}
+header h1 {
   font-family: "Fraunces", serif;
   text-transform: uppercase;
+  color: hsl(0, 0%, 100%);
+  font-size: 8vmin;
+  font-weight: 800;
+  letter-spacing: 1.5vmin;
+  text-align: center;
+  align-self: center;
+}
+header img {
+  justify-self: center;
 }/*# sourceMappingURL=style.css.map */
