--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -2,6 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,100;9..144,200;9..144,300;9..144,400;9..144,500;9..144,600;9..144,700;9..144,800;9..144,900&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-size: 18px;
     font-family: 'Barlow', sans-serif;
@@ -9,4 +15,27 @@ body {
     h1 {
         font-family: 'Fraunces', serif;
     }
+
+    h2 {
+        font-family: 'Fraunces', serif;
+        text-align: center;
+        font-size: 8vmin;
+        font-weight: 800;
+        max-width: 80%;
+        color: $very-dark-desaturated-blue;
+    }
+
+    p {
+        text-align: center;
+        padding: 5vmin 0;
+        color: $dark-grayish-blue;
+        font-size: clamp(1.1rem, 4vmin, 1.7rem);
+        font-weight: 600;
+        line-height: 1.5;
+    }
+
+    button.learn-more {
+        font-family: 'Fraunces', serif;
+    }
+
 }
