--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -19,6 +19,7 @@ body {
     h2 {
         font-family: 'Fraunces', serif;
         text-align: center;
+        margin: 0 auto;
         font-size: 8vmin;
         font-weight: 800;
         max-width: 80%;
@@ -27,7 +28,7 @@ body {
 
     p {
         text-align: center;
-        padding: 5vmin 0;
+        padding: 3vmin 0 0;
         color: $dark-grayish-blue;
         font-size: clamp(1.1rem, 4vmin, 1.7rem);
         font-weight: 600;
