--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -50,3 +50,86 @@ header {
         justify-self: center;
     }
 }
+
+
+
+
+@media only screen and (min-width: 1400px) {
+    header {
+        height: 800px;
+        min-width: 1400px;
+        max-width: 100vw;
+
+        grid-template-rows: 2fr 7fr 10fr;
+        
+        div {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 94%;
+
+            img:nth-child(1) {
+                scale: 2;
+            }
+            img:nth-child(2) {
+                display: none;
+            }
+    
+            nav {
+                display: block;
+
+                ul {
+                    display: flex;
+                }
+
+                li {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    list-style-type: none;
+                    margin: 0 3vmin;
+                }
+
+                a {
+                    color: $white;
+                    font-size: 1.125rem;
+                }
+
+                li:last-of-type {
+                    background-color: $white;
+                    width: 8.75rem;
+                    height: 3.5rem;
+                    border-radius: 30px;
+                    transition: background-color .2s ease;
+                }
+                li:last-of-type:hover {
+                    background-color: #ffffff71;
+                    transition: background-color .2s ease;
+                }
+                li:last-of-type a {
+                    text-transform: uppercase;
+                    color: $very-dark-desaturated-blue;
+                    font-size: 1rem;
+                    font-family: 'Fraunces', serif;
+                    font-weight: 600;
+                    transition: color .2s ease;
+                }
+                li:last-of-type:hover a {
+                    color: $white;
+                    transition: color .2s ease;
+                }
+
+                
+            }
+        }
+
+        h1 {
+            font-size: 8vmin;
+        }
+
+        img {
+            scale: 1.2;
+        }
+    }
+}
