media queries - section 'gallery'

--- a/scss/components/_section.scss
+++ b/scss/components/_section.scss
@@ -233,4 +233,14 @@ section {
 
     }
 
+    #section-gallery {
+        display: flex;
+    
+        div  {
+            img {
+                max-width: 25vw;
+            }
+        }
+    }
+
 }
