--- a/scss/abstracts/_variable.scss
+++ b/scss/abstracts/_variable.scss
@@ -10,7 +10,7 @@ $dark-desaturated-cyan: hsl(167, 40%, 24%);    // (graphic design text)
 $dark-blue: hsl(198, 62%, 26%);                // (photography text)
 $dark-moderate-cyan: hsl(168, 34%, 41%);       // (footer)
 $moderate-cyan: hsl(168, 44%, 70%);       // (footer)
-$cyan: hsl(166, 44%, 32%);
+$cyan: #2e7665;
 
 
 
