--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -47,3 +47,55 @@ footer {
         }
     }
 }
+
+
+@media only screen and (min-width: 1400px) {
+    footer {
+    
+        max-height: 50vh;
+        padding: 10vmin 0;
+    
+        & > svg {
+            scale: 1.3;
+        }
+        
+        nav {
+            padding: 6vmin clamp(3vw, 5vmin, 10vw) 10vmin;
+    
+            min-width: 35vw;
+    
+            // ul {
+            //     display: flex;
+            //     justify-content: space-between;
+            // }
+    
+            // li {
+            //     color: $cyan;
+            //     list-style-type: none;
+            //     cursor: pointer;
+            // }
+    
+            a {
+                font-size: clamp(1rem, 2vw, 2rem);
+            }
+
+            li:hover a {
+                color: $white;
+            }
+        }
+    
+        #icons-socialnetworks {
+            min-width: 20%;
+            max-width: 30%;
+    
+            svg {
+                scale: 2;
+                color: #2C7566;
+            }
+
+            svg:hover {
+                color: $white;
+            }
+        }
+    }
+}
