--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -66,7 +66,8 @@ header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            width: 94%;
+            margin: 0 auto;
+            width: 96%;
 
             img:nth-child(1) {
                 scale: 2;
@@ -86,9 +87,12 @@ header {
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    width: 8.75rem;
+                    height: 3.5rem;
 
                     list-style-type: none;
-                    margin: 0 3vmin;
+                    margin: 0 1vmin;
+                    cursor: pointer;
                 }
 
                 a {
@@ -103,8 +107,11 @@ header {
                     border-radius: 30px;
                     transition: background-color .2s ease;
                 }
-                li:last-of-type:hover {
+                li:hover {
                     background-color: #ffffff71;
+                    width: 8.75rem;
+                    height: 3.5rem;
+                    border-radius: 30px;
                     transition: background-color .2s ease;
                 }
                 li:last-of-type a {
@@ -115,7 +122,7 @@ header {
                     font-weight: 600;
                     transition: color .2s ease;
                 }
-                li:last-of-type:hover a {
+                li:hover a {
                     color: $white;
                     transition: color .2s ease;
                 }
