--- a/scss/style.css
+++ b/scss/style.css
@@ -352,7 +352,7 @@ body button.learn-more {
 }
 
 header {
-  background-image: url("../../image/photos/image-header.jpg");
+  background-image: url("/image/photos/image-header.jpg");
   background-position: bottom;
   background-size: cover;
   background-repeat: no-repeat;
@@ -367,7 +367,7 @@ header div {
 header div img {
   align-self: center;
 }
-header div img {
+header div > img {
   justify-self: flex-start;
   margin: 0 10vw;
 }
@@ -398,9 +398,9 @@ header div nav .triangle {
   right: 10vmin;
   width: 0;
   height: 0;
-  border-left: 50px solid transparent;
-  border-top: 50px solid transparent;
-  border-right: 50px solid hsl(0, 0%, 100%);
+  border-left: 15vmin solid transparent;
+  border-top: 15vmin solid transparent;
+  border-right: 15vmin solid hsl(0, 0%, 100%);
   transition: right 0.5s ease;
 }
 header div nav ul {
