--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,6 +1,6 @@
 
 header {
-    background-image: url('/image/photos/image-header.jpg');
+    background-image: url('../image/photos/image-header.jpg');
     background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
